fixed Search Results-container width on mobile size

--- a/src/components/search/Search.scss
+++ b/src/components/search/Search.scss
@@ -105,4 +105,8 @@
     .searchResultElement{
         border-bottom: 1px solid $gray-border;
     }
+
+    .Results-container{
+        width: 90%;
+    }
 }
